[package]
name = "tcp_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
rayon = "1.6.1"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
httparse = "*"
futures-util = "*"
bytes = "*"